# dlp-bot

./: .gitignore  README.md  pyproject.toml
.github/: actionlint.yml
.github/scripts/: build_matrix.py  bump.py  output_variables.py
.github/workflows/: ci.yml  update-action.yml  update-actions.yml  update-astring.yml  update-dependencies.yml  update-ejs.yml  update-meriyah.yml  update-protobug.yml  update-user-agent.yml  update-workflows.yml
bot/: __main__.py  git.py  github.py  knowledge.py  main.py  utils.py  workflows.py
bot/command/: actions.py  common.py  pr.py
bot/command/pr/: __init__.py  create.py
bot/command/tools/: __init__.py  variables.py
bot/command/update/: __init__.py  actions.py  astring.py  dependencies.py  ejs.py  meriyah.py  protobug.py  user_agent.py
requirements/: actions.txt  dev.txt  mypy.txt  pip.txt  pyflakes.txt  ruff.txt  update.txt
