[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dlp-bot"
authors = [
    {name = "bashonly", email = "bashonly@protonmail.com"},
]
description = "automated tools for the dlp org"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "actions",
    "bot",
    "dependencies",
    "github",
    "updater",
    "workflows",
]
license = "Unlicense"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
actions = [
    "pyyaml==6.0.2",
]
deps = [
    "uv==0.11.6",
]

[dependency-groups]
static-analysis = [
    "ruff~=0.15.0",
]

[project.scripts]
bot = "bot.main:main"

[tool.hatch.build.targets.sdist]
include = [
    "/bot",
    "/.gitignore",  # included by default, needed for auto-excludes
    "/LICENSE",  # included as license
    "/pyproject.toml",  # included by default
    "/README.md",  # included as readme
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.hatch.version]
path = "bot/__init__.py"
pattern = "__version__ = '(?P<version>[^']+)'"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",    # module-import-not-at-top-of-file
    "E501",    # line-too-long
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "UP031",   # printf-string-formatting
    "UP036",   # outdated-version-block
    "B006",    # mutable-argument-default
    "B008",    # function-call-in-default-argument
    "B011",    # assert-false
    "B017",    # assert-raises-exception
    "B023",    # function-uses-loop-variable (false positives)
    "B028",    # no-explicit-stacklevel
    "B904",    # raise-without-from-inside-except
    "A005",    # stdlib-module-shadowing
    "C401",    # unnecessary-generator-set
    "C402",    # unnecessary-generator-dict
    "COM812",  # missing-trailing-comma
    "PIE790",  # unnecessary-placeholder
    "SIM102",  # collapsible-if
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM112",  # uncapitalized-environment-variables
    "SIM113",  # enumerate-for-loop
    "SIM114",  # if-with-same-arms
    "SIM115",  # open-file-with-context-handler
    "SIM117",  # multiple-with-statements
    "SIM223",  # expr-and-false
    "SIM300",  # yoda-conditions
    "TD001",   # invalid-todo-tag
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "PLC0415", # import-outside-top-level
    "PLE0604", # invalid-all-object (false positives)
    "PLE0643", # potential-index-error (false positives)
    "PLW0603", # global-statement
    "PLW1510", # subprocess-run-without-check
    "PLW1641", # eq-without-hash
    "PLW2901", # redefined-loop-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF012",  # mutable-class-default
    "RUF100",  # unused-noqa (flake8 has slightly different behavior)
]
select = [
    "E",      # pycodestyle Error
    "W",      # pycodestyle Warning
    "F",      # Pyflakes
    "I",      # isort
    "Q",      # flake8-quotes
    "N803",   # invalid-argument-name
    "N804",   # invalid-first-argument-name-for-class-method
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN003", # banned-import-from
    "PIE",    # flake8-pie
    # "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET504", # unnecessary-assign
    "SIM",    # flake8-simplify
    "TID251", # banned-api
    "TD",     # flake8-todos
    "PLC",    # Pylint Convention
    "PLE",    # Pylint Error
    "PLW",    # Pylint Warning
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
    "base64",
    "datetime",
    "functools",
    "glob",
    "hashlib",
    "itertools",
    "json",
    "math",
    "os",
    "pathlib",
    "random",
    "re",
    "string",
    "sys",
    "time",
    "urllib.parse",
    "uuid",
    "xml",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"
avoid-escape = false

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "yaml",
]
ignore_missing_imports = true
